--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <h2>Achievements <i class="fas fa-trophy"></i></h2>
                 <div class="achievement-box">
                     <i class="fas fa-medal"></i>
-                    <p>Bronze Badge in Problem Solving in Python by code chef platform</p>
+                    <p>Got Bronze Badge in Problem Solving code chef platform</p>
                 </div> 
                 <div class="achievement-box">
                     <i class="fas fa-code"></i>
