--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         </section>
 
         <section id="links">
-            <div class="container">
+            <div class="container-skills">
                 <h2>Links <i class="fas fa-link"></i></h2>
                 <div class="link-box">
                     <i class="fab fa-github"></i>
@@ -284,12 +284,6 @@
             </div>
         </section>
     </main>
-
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 Subramanyam Sudhulagunta. All Rights Reserved.</p>
-        </div>
-    </footer>
 
     <script src="script.js"></script>
 </body>
