--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         </section>
 
         <section id="links">
-            <div class="container-skills">
+            <div class="container skills"> 
                 <h2>Links <i class="fas fa-link"></i></h2>
                 <div class="link-box">
                     <i class="fab fa-github"></i>
